crates/gammalooprs/src/cff/snapshots/gammalooprs__cff__feynkit__tests__root_amplitude_selected_orientation.snap
---
source: crates/gammalooprs/src/cff/feynkit.rs
expression: "serde_json::json!({\n    \"expression\": expression, \"surface_cache\": graph.surface_cache,\n})"
---
{
  "expression": {
    "orientations": [
      {
        "data": {
          "orientation": [
            "Default",
            "Default",
            "Undirected",
            "Undirected"
          ]
        },
        "expression": {
          "nodes": [
            {
              "children": [],
              "data": {
                "Esurface": 0
              },
              "node_id": 0,
              "parent": null
            }
          ]
        }
      }
    ],
    "surfaces": {
      "esurface_cache": [
        {
          "energies": [
            0,
            1
          ],
          "external_shift": [
            [
              3,
              -1
            ]
          ],
          "vertex_set": {
            "vertex_set": 1
          }
        }
      ],
      "hsurface_cache": []
    }
  },
  "surface_cache": {
    "esurface_cache": [
      {
        "energies": [
          0,
          1
        ],
        "external_shift": [
          [
            3,
            -1
          ]
        ],
        "vertex_set": {
          "vertex_set": 1
        }
      }
    ],
    "hsurface_cache": []
  }
}
