crates/gammalooprs/src/cff/snapshots/gammalooprs__cff__feynkit__tests__root_contracted_edge.snap
---
source: crates/gammalooprs/src/cff/feynkit.rs
expression: "serde_json::json!({\n    \"expression\": expression, \"surface_cache\": graph.surface_cache,\n})"
---
{
  "expression": {
    "orientations": [
      {
        "data": {
          "orientation": [
            "Default",
            "Undirected",
            "Default",
            "Undirected",
            "Undirected"
          ]
        },
        "expression": {
          "nodes": [
            {
              "children": [],
              "data": {
                "Esurface": 0
              },
              "node_id": 0,
              "parent": null
            }
          ]
        }
      },
      {
        "data": {
          "orientation": [
            "Reversed",
            "Undirected",
            "Reversed",
            "Undirected",
            "Undirected"
          ]
        },
        "expression": {
          "nodes": [
            {
              "children": [],
              "data": {
                "Esurface": 1
              },
              "node_id": 0,
              "parent": null
            }
          ]
        }
      }
    ],
    "surfaces": {
      "esurface_cache": [
        {
          "energies": [
            0,
            2
          ],
          "external_shift": [
            [
              4,
              -1
            ]
          ],
          "vertex_set": {
            "vertex_set": 1
          }
        },
        {
          "energies": [
            0,
            2
          ],
          "external_shift": [
            [
              4,
              1
            ]
          ],
          "vertex_set": {
            "vertex_set": 1
          }
        }
      ],
      "hsurface_cache": []
    }
  },
  "surface_cache": {
    "esurface_cache": [
      {
        "energies": [
          0,
          2
        ],
        "external_shift": [
          [
            4,
            -1
          ]
        ],
        "vertex_set": {
          "vertex_set": 1
        }
      },
      {
        "energies": [
          0,
          2
        ],
        "external_shift": [
          [
            4,
            1
          ]
        ],
        "vertex_set": {
          "vertex_set": 1
        }
      }
    ],
    "hsurface_cache": []
  }
}
