crates/gammalooprs/src/cff/snapshots/gammalooprs__cff__feynkit__tests__subgraph_reversed_boundary.snap
---
source: crates/gammalooprs/src/cff/feynkit.rs
expression: "serde_json::json!({\n    \"expression\": expression, \"surface_cache\": surface_cache,\n})"
---
{
  "expression": {
    "orientations": [
      {
        "data": {
          "orientation": [
            "Reversed",
            "Default",
            "Default",
            "Undirected",
            "Default"
          ]
        },
        "expression": {
          "nodes": [
            {
              "children": [],
              "data": {
                "Hsurface": 0
              },
              "node_id": 0,
              "parent": null
            }
          ]
        }
      },
      {
        "data": {
          "orientation": [
            "Reversed",
            "Default",
            "Reversed",
            "Undirected",
            "Default"
          ]
        },
        "expression": {
          "nodes": [
            {
              "children": [],
              "data": {
                "Esurface": 0
              },
              "node_id": 0,
              "parent": null
            }
          ]
        }
      }
    ],
    "surfaces": {
      "esurface_cache": [
        {
          "energies": [
            0,
            2
          ],
          "external_shift": [
            [
              4,
              1
            ]
          ],
          "vertex_set": {
            "vertex_set": 1
          }
        }
      ],
      "hsurface_cache": [
        {
          "external_shift": [
            [
              4,
              -1
            ]
          ],
          "negative_energies": [
            0
          ],
          "positive_energies": [
            2
          ],
          "vertex_set": {
            "vertex_set": 1
          }
        }
      ]
    }
  },
  "surface_cache": {
    "esurface_cache": [
      {
        "energies": [
          0,
          2
        ],
        "external_shift": [
          [
            4,
            1
          ]
        ],
        "vertex_set": {
          "vertex_set": 1
        }
      }
    ],
    "hsurface_cache": [
      {
        "external_shift": [
          [
            4,
            -1
          ]
        ],
        "negative_energies": [
          0
        ],
        "positive_energies": [
          2
        ],
        "vertex_set": {
          "vertex_set": 1
        }
      }
    ]
  }
}
